# nlp-lab

./: Makefile  README.md  main.py  pyproject.toml  train.py
papers/seq2seq/: inference.py  model.py  trainer.py
src/layers/: embedding.py  linear.py  lstm.py
src/training/: loss.py  optimizer.py
src/utils/: data.py  metrics.py  tokenizer.py
