[project]
name = "nlp-lab"
version = "0.1.0"
authors = [{ name = "Nazmul Alam", email = "diptunazmulalam@gmail.com" }]
description = "NLP-Lab"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src", "papers"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
